# XTouch

./: .gitignore  README.md  main.py  motu.py  pyproject.toml  start.sh
motu_xtouch/: __main__.py  map.py  mapping.py  motu_client.py
typings/mido/: __init__.pyi  ports.pyi
