[project]
name = "xtouch"
version = "0.1.0"
description = ""
authors = [{ name = "Sam Aardema", email = "sam.aardema@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["mido (>=1.3.3,<2.0.0)", "python-rtmidi (>=1.5.8,<2.0.0)", "applescript (>=2021.2.9,<2022.0.0)", "requests (>=2.32.5,<3.0.0)"]

[tool.poetry]
packages = [{ include = "motu_xtouch" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
